--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 .home{
     width: 100%;
     height: 100vh;
-    background-image: url(images/home.jpg);
+    background-image: url(home.jpg);
     background-size:cover;
     background-position: center;
     height: 500px;
